fixed weird mobile white space

--- a/css/timelinestyle.css
+++ b/css/timelinestyle.css
@@ -410,7 +410,7 @@ cursor:pointer;
     padding-top:25%;
     text-align:justify;
     margin-left:20%;
-    font-size:1em;
+    font-size:120%;
     margin-right:20%;
 }
 
@@ -418,6 +418,7 @@ cursor:pointer;
 {
     margin-top:-10%;
     width:100%;
+    margin-bottom:-10%;
     position:relative;
     height:fit-content;
     background: #cccccc; /* Old browsers */
@@ -508,7 +509,7 @@ cursor:pointer;
     text-align:center;
     margin-left:20%;
     margin-right:20%;
-    padding-bottom:10%;
+    padding-bottom:20%;
     z-index:150;
 
 }
